--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>This is Ryan's website!</h1>
-    <p>I have made the worst website in the world!<p>
+    <p>I have made the greatest website in the world!This website is fantastic! On this website you can play games and learn
+      some drawing scills!</p>
   </body>
 </html>
